redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: demo
spec:
  selector:
    app: redis-server
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
