upg-loadme-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: ClusterIP
  ports:
    - name: app-port
      protocol: TCP
      port: 80
      targetPort: 8081
