upg-loadme-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upg-loadme-external
  namespace: demo
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: CreatedBy=testUser
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: upg-loadme
                port:
                  number: 80
